# xacc-vqe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.py  xacc-vqe.cpp
benchmark/: ansatzgenerator.py  customD2.py  customH2.py  moleculegenerator.py  new_vqe.py  new_vqe_energy.py  psi4openfermion.py  vqe.py  vqe_base.py  vqe_energy.py  vqe_param_sweep.py
cmake/: xaccvqe-config.cmake.in
compiler/: CMakeLists.txt  FermionCompiler.cpp  FermionCompiler.hpp  FermionCompilerActivator.cpp  manifest.json
compiler/fcidump/: CMakeLists.txt  FCIDUMPActivator.cpp  FCIDumpPreprocessor.cpp  FCIDumpPreprocessor.hpp  manifest.json
compiler/fcidump/tests/: CMakeLists.txt  FCIDumpPreprocessorTester.cpp
decorators/: CMakeLists.txt  DecoratorsActivator.cpp  PurificationDecorator.cpp  (+9 more)
decorators/tests/: CMakeLists.txt  PurificationDecoratorTester.cpp  RDMGeneratorTester.cpp  RDMPurificationDecoratorTester.cpp  SymVerificationDecoratorTester.cpp  VQERestartDecoratorTester.cpp
ir/: CMakeLists.txt  CommonPauliProducts.hpp  CompositeSpinInstruction.cpp  CompositeSpinInstruction.hpp  FermionIR.hpp  FermionInstruction.hpp  FermionKernel.hpp  PauliOperator.cpp  PauliOperator.hpp  PrintScaffoldVisitor.hpp  SpinInstruction.cpp  SpinInstruction.hpp  VQEIRActivator.cpp  manifest.json
ir/algorithms/heuristic/: HeuristicIRGenerator.cpp  HeuristicIRGenerator.hpp
ir/algorithms/hwe/: HWE.cpp  HWE.hpp  testhwe.py
ir/algorithms/uccsd/: CommutingSetGenerator.hpp  UCCSD.cpp  UCCSD.hpp
ir/tests/: CMakeLists.txt  CommutingSetGeneratorTester.cpp  CompositeSpinInstructionTester.cpp  FermionInstructionTester.cpp  FermionKernelTester.cpp  PauliOperatorTester.cpp  SpinInstructionTester.cpp  UCCSDTester.cpp
mpi/: CMakeLists.txt  MPIProvider.hpp
mpi/boost-mpi/: BoostMPIActivator.cpp  BoostMPIProvider.hpp  CMakeLists.txt  manifest.json
mpi/no-mpi/: CMakeLists.txt  NoMPIActivator.cpp  NoMPIProvider.hpp  manifest.json
python/: CMakeLists.txt  pyxaccvqe.py  xacc-vqe-py.cpp  xaccvqe.py
python/decorators/: bobyqa_optimizer.py  scipy_optimizer.py  wrappedVQE.py  wrappedVQEEnergy.py
python/tests/: compile_test.py  compute_energy_test.py  eigen_diagonalize_test.py  vqe_test.py
task/: CMakeLists.txt  Program.cpp  Program.hpp  StatePreparationEvaluator.hpp  VQEParameterGenerator.hpp  VQEProgram.hpp  VQETask.hpp  VQETaskActivator.cpp
task/tasks/: BruteForceComputeGroundStateEnergy.cpp  BruteForceComputeGroundStateEnergy.hpp  CMakeLists.txt  ComputeEnergyVQETask.cpp  ComputeEnergyVQETask.hpp  ComputeExpectationValues.cpp  ComputeExpectationValues.hpp  DiagonalizeTask.cpp  DiagonalizeTask.hpp  GenerateHamiltonianStats.cpp  GenerateHamiltonianStats.hpp  GenerateOpenFermionEigenspectrumScript.cpp  GenerateOpenFermionEigenspectrumScript.hpp  ProfileHamiltonianTask.cpp  ProfileHamiltonianTask.hpp  Sweep1DParameter.cpp  Sweep1DParameter.hpp  VQEMinimizeTask.cpp  VQEMinimizeTask.hpp
task/tasks/arpack/: ArpackActivator.cpp  ArpackppGroundStateEnergyCalculator.cpp  ArpackppGroundStateEnergyCalculator.hpp  CMakeLists.txt  manifest.json
task/tasks/petsc/: CMakeLists.txt
task/tasks/petsc/slepc/: CMakeLists.txt  SlepcDiagonalizeBackend.cpp  SlepcDiagonalizeBackend.hpp  manifest.json
task/tasks/petsc/tao-vqe/: CMakeLists.txt  TaoVQEActivator.cpp  TaoVQEBackend.cpp  TaoVQEBackend.hpp  manifest.json
task/tasks/pso/: CMakeLists.txt  PSOVQEActivator.cpp  PsoVQEBackend.cpp  PsoVQEBackend.hpp  manifest.json
task/tasks/slepc/: CMakeLists.txt  SlepcActivator.cpp  SlepcDiagonalizeBackend.cpp  SlepcDiagonalizeBackend.hpp  SlepcGroundStateEnergyCalculator.cpp  SlepcGroundStateEnergyCalculator.hpp
task/tests/: CMakeLists.txt  ComputeEnergyVQETaskTester.cpp  DiagonalizeTaskTester.cpp  VQEMinimizeTaskTester.cpp
transformations/: CMakeLists.txt  FermionToSpinTransformation.hpp  VQEIRTransformationActivator.cpp
transformations/bk/: BravyiKitaevIRTransformation.cpp  BravyiKitaevIRTransformation.hpp  Fenwick.hpp
transformations/jw/: EfficientJW.cpp  EfficientJW.hpp  JordanWignerIRTransformation.cpp  JordanWignerIRTransformation.hpp  LongRangeJW.cpp  LongRangeJW.hpp
transformations/tests/: BravyiKitaevIRTransformationTester.cpp  CMakeLists.txt  FTreeTester.cpp  JordanWignerIRTransformationTester.cpp
vqe/: CMakeLists.txt  VQEProblem.hpp
vqe/compiler/: CMakeLists.txt  FCIDumpPreprocessor.cpp  FCIDumpPreprocessor.hpp  FermionCompiler.cpp  FermionCompiler.hpp  FermionCompilerActivator.cpp
vqe/compiler/fcidump/: CMakeLists.txt  FCIDumpPreprocessor.cpp
vqe/compiler/fcidump/tests/: FCIDumpPreprocessorTester.cpp
vqe/compiler/tests/: FCIDumpPreprocessorTester.cpp  FermionCompilerTester.cpp
vqe/ir/: CMakeLists.txt  CompositeSpinInstruction.cpp  CompositeSpinInstruction.hpp  FermionIR.hpp  FermionInstruction.hpp  FermionKernel.hpp  JordanWignerIRTransformation.cpp  JordanWignerIRTransformation.hpp  QubitInstruction.hpp  SpinInstruction.hpp  VQEGateFunction.cpp  VQEGateFunction.hpp  VQEIRActivator.cpp
vqe/ir/tests/: CompositeSpinInstructionTester.cpp  FermionInstructionTester.cpp  JordanWignerIRTransformationTester.cpp  QubitInstructionTester.cpp  SpinInstructionTester.cpp  VQEGateFunctionTester.cpp
vqe/problem/: CMakeLists.txt  VQEProblem.hpp
vqe/problem/tests/: VQEProblemTester.cpp
vqe/scripts/: README.md  compareFermilib.py  generateVQEKernels.py
vqe/scripts/test_molecules/: ch2.mol  h2.mol  h2o.mol  lih.mol
vqe/transformation/: AddUCCSDStatePreparation.cpp  AddUCCSDStatePreparation.hpp  CMakeLists.txt  JordanWignerIRTransformation.cpp  JordanWignerIRTransformation.hpp  VQEIRTransformationActivator.cpp  manifest.json
vqe/transformation/bk/: BravyiKitaevIRTransformation.cpp  Fenwick.hpp
vqe/transformation/jw/: JordanWignerIRTransformation.cpp
vqe/transformation/tests/: AddUCCSDStatePreparationTester.cpp  BravyiKitaevIRTransformationTester.cpp  CommutingSetGeneratorTester.cpp  FTreeTester.cpp  JordanWignerIRTransformationTester.cpp
vqe/transformation/uccsd/: AddUCCSDStatePreparation.cpp  AddUCCSDStatePreparation.hpp  CommutingSetGenerator.hpp
(+75 files in other folders)
