add_xacc_test(SymVerificationDecorator)
target_link_libraries(SymVerificationDecoratorTester xacc-vqe-decorators)
add_xacc_test(VQERestartDecorator)
target_link_libraries(VQERestartDecoratorTester xacc-vqe-decorators)
add_xacc_test(PurificationDecorator)
target_link_libraries(PurificationDecoratorTester xacc-vqe-decorators)
add_xacc_test(RDMGenerator)
target_link_libraries(RDMGeneratorTester xacc-vqe-decorators)