add_xacc_test(ComputeEnergyVQETask)
target_link_libraries(ComputeEnergyVQETaskTester xacc-vqe-tasks xacc xacc-quantum-gate)
add_xacc_test(DiagonalizeTask)
target_link_libraries(DiagonalizeTaskTester xacc-vqe-tasks xacc xacc-quantum-gate)
add_xacc_test(VQEMinimizeTask)
target_link_libraries(VQEMinimizeTaskTester xacc-vqe-tasks xacc xacc-quantum-gate)
